# wazuh-sigma

./: .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  Claude.md  Codex.md  README.md  docker-compose.yml  pipeline.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
ci/: .gitlab-ci.yml  GATES_QUICK_REFERENCE.md  VALIDATION_GATES.md  pipeline.yml  validation-gates.yml
ci/baselines/: windows-mapping-cleanup.json  windows_mapping_evidence_classification.json
docs/: ADVISOR.md  ADVISOR_ROADMAP.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CONVERSION_COVERAGE.md  FIXTURE_VERIFICATION.md  INCREMENTAL_CACHE.md  PIPELINE.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  RUNBOOK.md  SUPPORT_MATRIX.md  WINDOWS_ANALYSIS_QUICKSTART.md  wazuh-parent-rule-mapping.md  windows-evtx-field-mapping.md  windows_field_mapping_expanded.md
evidence/: corpus-baseline.json  native-validation-baseline.json  semantic-baseline.json
scripts/: normalize_wazuh_rules.py  windows_corpus_regression.py  windows_removed_mapping_audit.py
src/wazuh_sigma/: config.py  naming.py  pipeline.py  pipeline_doctor.py  pipeline_stages.py  reporting.py  ruleset_chunks.py  sigma.py  wazuh_contract.py
src/wazuh_sigma/active_testing/: __init__.py  alerts.py  caldera.py  models.py  openai_generator.py  runner.py
src/wazuh_sigma/advisor/: __init__.py  cache.py  errors.py  features.py  models.py  policy.py  prompts.py  runtime.py  sanitizer.py  service.py  telemetry.py
src/wazuh_sigma/advisor/providers/: __init__.py  base.py  openai.py
src/wazuh_sigma/backend/: __init__.py  wazuh.py
src/wazuh_sigma/converter/: __init__.py  cli.py  presentation.py  service.py
src/wazuh_sigma/deploy/: __init__.py  client.py  reports.py  wazuh_api.py
src/wazuh_sigma/fields/: __init__.py  errors.py  generic.py  models.py  registry.py  validation.py  windows.py
src/wazuh_sigma/fixtures/: __init__.py  catalogue.py  errors.py  loader.py  models.py  provenance.py  verifier.py
src/wazuh_sigma/incremental/: __init__.py  cache.py  errors.py  fingerprint.py  identity.py  integration.py  manifest.py  models.py  service.py
src/wazuh_sigma/validator/: catalog.py  cli.py  discovery.py  models.py  pattern_checks.py  reference_checks.py  reporting.py  rule_validator.py  structure_checks.py
src/wazuh_sigma/windows/: __init__.py  analysis.py  cli.py  fixture_generation.py  optimization.py
tests/: advisor_helpers.py  test_active_testing.py  test_advisor_cache.py  test_advisor_config.py  test_advisor_features.py  test_advisor_integration.py  test_advisor_live.py  test_advisor_models.py  test_advisor_policy.py  test_advisor_provider.py  test_advisor_sanitizer.py  test_advisor_service.py  test_backend_field_mapping.py  test_code_quality.py  test_docker_stack.py  test_field_resolution_result.py  test_fields_windows.py  test_incremental_models.py  test_incremental_service.py  test_normalize_wazuh_rules.py  test_pipeline.py  test_real_pipeline.py  test_reporting.py  test_ruleset_chunks.py  test_sigma_converter.py  test_wazuh_deploy.py  test_wazuh_normalizer.py  test_windows_cli.py
tests/fixtures/wazuh/windows/: application_error_1000.json  dns_client_event_3008_query.json  security_event_4624_logon.json  sysmon_event_1_process_creation.json
tests/unit/: test_rule_validator_comprehensive.py
