[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wazuh-sigma-pipeline"
version = "1.0.0"
description = "Sigma rule conversion and validation pipeline for Wazuh"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "Apache-2.0"
authors = [
    {name = "ahkecha", email = "ahkecha@users.noreply.github.com"},
]
maintainers = [
    {name = "ahkecha", email = "ahkecha@users.noreply.github.com"},
]
keywords = ["wazuh", "sigma", "security", "detection", "rules", "siem", "threat-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "PyYAML>=6.0,<7.0",
    "click>=8.0,<9.0",
    "pysigma>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "pydantic>=2.0,<3.0",
    "openai>=1.100,<2.0",
    "black>=24.0,<26.0",
    "isort>=5.13,<7.0",
    "mypy>=1.8,<2.0",
    "bandit>=1.7,<2.0",
]
test = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "click>=8.0,<9.0",
    "pydantic>=2.0,<3.0",
    "openai>=1.100,<2.0",
]
advisor = [
    "openai>=1.100,<2.0",
    "pydantic>=2.0,<3.0",
]

[project.urls]
"Homepage" = "https://example.invalid/wazuh-sigma"
"Documentation" = "https://example.invalid/wazuh-sigma/tree/main/docs"
"Repository" = "https://example.invalid/wazuh-sigma"
"Issues" = "https://example.invalid/wazuh-sigma/issues"
"Changelog" = "https://example.invalid/wazuh-sigma/releases"
"CI/CD" = "https://example.invalid/wazuh-sigma/actions"

[project.scripts]
sigma-convert = "wazuh_sigma.converter.cli:cli"
sigma-validate = "wazuh_sigma.validator.cli:main"
sigma-deploy-wazuh = "wazuh_sigma.deploy.wazuh_api:main"
sigma-pipeline = "wazuh_sigma.pipeline:main"
sigma-windows-analysis = "wazuh_sigma.windows.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["wazuh_sigma*"]

[tool.setuptools.package-dir]
"" = "src"

# Code Formatting
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Import Sorting
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", ".venv/*"]
known_first_party = ["wazuh_sigma"]
known_third_party = ["yaml", "pydantic", "click"]

# Type Checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = false
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

# Testing
[tool.pytest.ini_options]
testpaths = [
    "tests/test_sigma_converter.py",
    "tests/test_real_pipeline.py",
    "tests/test_docker_stack.py",
    "tests/test_wazuh_deploy.py",
    "tests/test_reporting.py",
    "tests/test_pipeline.py",
    "tests/test_active_testing.py",
    "tests/test_incremental_models.py",
    "tests/test_incremental_service.py",
    "tests/test_code_quality.py",
    "tests/test_wazuh_normalizer.py",
    "tests/test_normalize_wazuh_rules.py",
    "tests/test_ruleset_chunks.py",
    "tests/test_advisor_models.py",
    "tests/test_advisor_features.py",
    "tests/test_advisor_sanitizer.py",
    "tests/test_advisor_policy.py",
    "tests/test_advisor_cache.py",
    "tests/test_advisor_provider.py",
    "tests/test_advisor_service.py",
    "tests/test_advisor_config.py",
    "tests/test_advisor_integration.py",
    "tests/test_windows_cli.py",
    "tests/unit/test_rule_validator_comprehensive.py",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "openai_integration: optional live OpenAI tests; require OPENAI_API_KEY and are never run by default",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
junit_family = "xunit2"

# Coverage
[tool.coverage.run]
source = ["src/wazuh_sigma"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "^\\s*@(abc\\.)?abstractmethod",
    "^\\s*@(abc\\.)?abstractproperty",
    "@overload",
]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

# Linting
[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "W0703",  # broad-except
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 10
max-arguments = 7

# Security
[tool.bandit]
exclude_dirs = ["/test", "/venv"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]
